health: przeniesienie inline JS do /public/health.js (zgodne z CSP)

--- a/public/health.html
+++ b/public/health.html
@@ -50,48 +50,7 @@
     </div>
   </div>
 
-  <script>
-    (function(){
-      const host = location.hostname.toLowerCase();
-      document.getElementById('host').textContent = host;
-      document.getElementById('time').textContent = new Date().toISOString();
-      document.getElementById('mode').textContent =
-        host.startsWith('staging.') ? 'staging' :
-        host.startsWith('localhost') ? 'dev' : 'production';
-
-      // Local health.json
-      fetch('/health.json?cb=' + Date.now(), {cache:'no-store'})
-        .then(async r=>{
-          const t = document.getElementById('loc-status');
-          const pre = document.getElementById('loc-json');
-          if(r.ok){
-            t.innerHTML = '<span class="ok">OK:</span> /health.json dostępny.';
-            pre.textContent = JSON.stringify(await r.json(), null, 2);
-          }else{
-            t.innerHTML = '<span class="err">BŁĄD:</span> /health.json zwrócił status ' + r.status + '.';
-          }
-        })
-        .catch(()=>{
-          document.getElementById('loc-status').innerHTML = '<span class="err">BŁĄD:</span> nie udało się pobrać /health.json';
-        });
-
-      // API przez nasz proxy (brak CORS)
-      fetch('/api/health-proxy?cb=' + Date.now(), {cache:'no-store'})
-        .then(async r=>{
-          const t = document.getElementById('api-status');
-          const pre = document.getElementById('api-json');
-          const txt = await r.text();
-          if(r.ok){
-            t.innerHTML = '<span class="ok">OK:</span> API przez proxy odpowiedziało ' + r.status + '.';
-          }else{
-            t.innerHTML = '<span class="warn">UWAGA:</span> API przez proxy odpowiedziało statusem ' + r.status + '.';
-          }
-          pre.textContent = txt;
-        })
-        .catch(()=>{
-          document.getElementById('api-status').innerHTML = '<span class="err">BŁĄD:</span> proxy nie odpowiedziało.';
-        });
-    })();
-  </script>
+  <!-- Zewnętrzny skrypt zgodny z CSP (bez inline) -->
+  <script defer src="/health.js"></script>
 </body>
 </html>
