--- a/public/404.html
+++ b/public/404.html
@@ -5,18 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Nie znaleziono strony — AWON</title>
   <link rel="stylesheet" href="/uifix.css">
-  <style>
-    body{font-family:system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial;margin:0;min-height:100vh;display:grid;place-items:center;background:#f8fafc;color:#0f172a}
-    .card{background:#fff;border:1px solid #e5e7eb;border-radius:16px;box-shadow:0 6px 18px rgba(0,0,0,.06);max-width:680px;width:92%;padding:28px}
-    h1{margin:0 0 8px;font-size:28px}
-    p{margin:6px 0 0}
-    .links{margin-top:18px;display:flex;gap:12px;flex-wrap:wrap}
-    a.btn{display:inline-block;border:1px solid #e5e7eb;border-radius:10px;padding:10px 14px;text-decoration:none}
-    a.btn:hover{box-shadow:0 2px 10px rgba(0,0,0,.08)}
-    code{background:#f1f5f9;padding:2px 6px;border-radius:6px}
-  </style>
+  <link rel="stylesheet" href="/pages.css">
 </head>
-<body>
+<body class="page-404">
   <main class="card">
     <h1>404 — tej strony nie znaleźliśmy</h1>
     <p>Być może adres jest nieaktualny lub literówka. Skorzystaj z linków poniżej.</p>
@@ -26,7 +17,7 @@
       <a class="btn" href="/select-test.html">Test selectów</a>
       <a class="btn" href="/smoke.html">Smoke test</a>
     </div>
-    <p class="meta" style="color:#334155;margin-top:14px">Jeśli błąd się powtarza, zgłoś nam adres: <code id="path"></code></p>
+    <p class="meta mt-14">Jeśli błąd się powtarza, zgłoś nam adres: <code id="path"></code></p>
   </main>
   <script defer src="/404.js"></script>
 </body>
