--- a/public/health.html
+++ b/public/health.html
@@ -5,19 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>AWON — Health</title>
   <link rel="stylesheet" href="/uifix.css">
-  <style>
-    body{font-family:system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial;margin:24px;color:#0f172a}
-    .wrap{max-width:860px;margin:auto}
-    h1{font-size:22px;margin:0 0 12px}
-    code{background:#f1f5f9;padding:2px 6px;border-radius:6px}
-    .ok{color:#16a34a;font-weight:700}
-    .warn{color:#b45309;font-weight:700}
-    .err{color:#dc2626;font-weight:700}
-    .box{border:1px solid #e5e7eb;border-radius:12px;padding:16px;margin:12px 0}
-    .meta{font-size:14px;color:#334155}
-    .grid{display:grid;grid-template-columns:1fr 1fr;gap:12px}
-    @media (max-width:720px){.grid{grid-template-columns:1fr}}
-  </style>
+  <link rel="stylesheet" href="/pages.css">
 </head>
 <body>
   <div class="wrap">
@@ -49,8 +37,6 @@
       <a href="/select-test.html" target="_blank">/select-test.html</a>
     </div>
   </div>
-
-  <!-- Zewnętrzny skrypt zgodny z CSP (bez inline) -->
   <script defer src="/health.js"></script>
 </body>
 </html>
