--- a/public/version.html
+++ b/public/version.html
@@ -5,13 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>AWON — Wersja wdrożenia</title>
   <link rel="stylesheet" href="/uifix.css">
-  <style>
-    body{font-family:system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial;margin:24px;color:#0f172a}
-    .box{border:1px solid #e5e7eb;border-radius:12px;padding:16px;margin:12px 0}
-    code{background:#f1f5f9;padding:2px 6px;border-radius:6px}
-    .grid{display:grid;grid-template-columns:1fr 1fr;gap:12px}
-    @media(max-width:720px){.grid{grid-template-columns:1fr}}
-  </style>
+  <link rel="stylesheet" href="/pages.css">
 </head>
 <body>
   <h1>AWON — Wersja wdrożenia</h1>
