perf: preconnect/dns-prefetch; security: HSTS+CORP; ops: /.well-known/security.txt; feat: SPA fallback /app/*

--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
     <meta name="x-banner" content="%VITE_SHOW_BANNER%">
     <meta name="x-banner-text" content="%VITE_BANNER_TEXT%">
     <meta name="x-log" content="%VITE_LOG_PAGEVIEWS%">
+
+    <!-- preconnect (wstępne połączenie) i dns-prefetch (wstępne DNS) -->
+    <link rel="preconnect" href="https://api.awonsystem.pl" crossorigin>
+    <link rel="dns-prefetch" href="//api.awonsystem.pl">
+    <link rel="preconnect" href="https://vitals.vercel-insights.com" crossorigin>
+    <link rel="dns-prefetch" href="//vitals.vercel-insights.com">
+
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="stylesheet" href="/uifix.css" />
   </head>
