--- a/public/404.html
+++ b/public/404.html
@@ -4,11 +4,16 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Nie znaleziono strony — AWON</title>
+  <link rel="manifest" href="/manifest.webmanifest">
+  <meta name="theme-color" content="#0f172a">
+  <link rel="canonical" href="https://awonsystem.pl/">
   <link rel="stylesheet" href="/uifix.css">
   <link rel="stylesheet" href="/pages.css">
+  <link rel="preload" href="/pages.css" as="style">
 </head>
 <body class="page-404">
-  <main class="card">
+  <a href="#main" class="skip-link">Pomiń do treści</a>
+  <main id="main" class="card">
     <h1>404 — tej strony nie znaleźliśmy</h1>
     <p>Być może adres jest nieaktualny lub literówka. Skorzystaj z linków poniżej.</p>
     <div class="links">
