brand: wdrożenie logo #1 (mark + poziome) + favicon.svg + update brand page

--- a/public/brand.html
+++ b/public/brand.html
@@ -8,15 +8,23 @@
   <meta name="theme-color" content="#0f172a">
   <link rel="stylesheet" href="/uifix.css">
   <link rel="stylesheet" href="/pages.css">
+  <style>
+    .img-fluid{max-width:100%;height:auto;display:block}
+    .choice{border:2px solid #22C55E;border-radius:12px}
+    .row{display:grid;grid-template-columns:1fr;gap:16px}
+    @media(min-width:720px){.row{grid-template-columns:1fr 1fr}}
+  </style>
 </head>
 <body>
   <main class="wrap">
     <h1>Propozycje logo — AWON</h1>
-    <div class="box"><img src="/brand/awon-logo-1.svg" alt="Logo 1 — dom + check" style="max-width:100%"></div>
-    <div class="box"><img src="/brand/awon-logo-2.svg" alt="Logo 2 — monogram AW" style="max-width:100%"></div>
-    <div class="box"><img src="/brand/awon-logo-3.svg" alt="Logo 3 — kalendarz w domku" style="max-width:100%"></div>
-    <div class="box"><img src="/brand/awon-logo-4.svg" alt="Logo 4 — klucz + kropki" style="max-width:100%"></div>
-    <p class="meta">Kolory: granat <code>#0F172A</code>, zielony <code>#22C55E</code>.</p>
+    <div class="row">
+      <div class="box choice"><img class="img-fluid" src="/logo/awon-logo-horizontal.svg" alt="Logo 1 — wybrane (dom + check)"></div>
+      <div class="box"><img class="img-fluid" src="/brand/awon-logo-2.svg" alt="Logo 2 — monogram AW"></div>
+      <div class="box"><img class="img-fluid" src="/brand/awon-logo-3.svg" alt="Logo 3 — kalendarz w domku"></div>
+      <div class="box"><img class="img-fluid" src="/brand/awon-logo-4.svg" alt="Logo 4 — klucz + kropki"></div>
+    </div>
+    <p class="meta">Wybrane: <strong>Propozycja 1</strong>. Kolory: granat <code>#0F172A</code>, zielony <code>#22C55E</code>.</p>
   </main>
 </body>
 </html>
