pwa: PNG 192/512; seo: og.png; robots: noindex dla /brand.html

--- a/index.html
+++ b/index.html
@@ -24,11 +24,13 @@
     <meta property="og:description" content="AWON — prostsza obsługa rezerwacji i operacji w obiektach noclegowych." />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://awonsystem.pl/" />
-    <meta property="og:image" content="https://awonsystem.pl/favicon.svg" />
-    <meta name="twitter:card" content="summary" />
+    <meta property="og:image" content="https://awonsystem.pl/logo/og.png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="AWON — system zarządzania wynajmem" />
     <meta name="twitter:description" content="AWON — prostsza obsługa rezerwacji i operacji w obiektach noclegowych." />
-    <meta name="twitter:image" content="https://awonsystem.pl/favicon.svg" />
+    <meta name="twitter:image" content="https://awonsystem.pl/logo/og.png" />
 
     <!-- preconnect/dns-prefetch -->
     <link rel="preconnect" href="https://api.awonsystem.pl" crossorigin>
