feat(contact): /contact.html + /api/contact (form/JSON, walidacja, honeypot, redirect)

--- a/public/contact.html
+++ b/public/contact.html
@@ -4,44 +4,45 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Kontakt — AWON</title>
-  <meta name="description" content="Skontaktuj się z zespołem AWON.">
-  <link rel="canonical" href="https://awonsystem.pl/contact.html">
-  <link rel="manifest" href="/manifest.webmanifest">
-  <meta name="theme-color" content="#0f172a">
   <link rel="stylesheet" href="/uifix.css">
   <link rel="stylesheet" href="/pages.css">
+  <meta name="description" content="Skontaktuj się z zespołem AWON.">
 </head>
 <body>
-  <a href="#main" class="skip-link">Pomiń do treści</a>
-  <main id="main" class="wrap">
+  <main class="wrap">
     <h1>Kontakt</h1>
-    <div class="box">
-      <form id="contact-form" novalidate>
-        <div class="grid">
-          <label>Imię i nazwisko
-            <input name="name" type="text" required style="width:100%;padding:8px">
-          </label>
-          <label>E-mail
-            <input name="email" type="email" required style="width:100%;padding:8px">
-          </label>
-        </div>
-        <label>Wiadomość
-          <textarea name="message" rows="6" required style="width:100%;padding:8px"></textarea>
+    <p>Masz pytanie? Wypełnij formularz — odpowiemy.</p>
+
+    <form method="post" action="/api/contact?redirect=/thanks.html" class="form">
+      <div class="row">
+        <label>Imię i nazwisko
+          <input name="name" required minlength="2" maxlength="100" autocomplete="name">
         </label>
+      </div>
 
-        <!-- Honeypot (ukryte pole dla botów) -->
-        <div style="position:absolute;left:-9999px">
-          <label>Leave this field empty:
-            <input name="website" type="text" tabindex="-1" autocomplete="off">
-          </label>
-        </div>
+      <div class="row">
+        <label>E-mail
+          <input type="email" name="email" required maxlength="160" autocomplete="email" inputmode="email">
+        </label>
+      </div>
 
-        <button type="submit" style="margin-top:12px">Wyślij</button>
-        <div id="contact-info" class="meta" style="margin-top:10px"></div>
-      </form>
-    </div>
-    <p><a href="/">← Strona główna</a></p>
+      <div class="row">
+        <label>Wiadomość
+          <textarea name="message" required minlength="10" maxlength="2000" rows="6"></textarea>
+        </label>
+      </div>
+
+      <!-- honeypot (pułapka na boty) — nie wypełniaj -->
+      <div style="position:absolute;left:-10000px;top:auto;width:1px;height:1px;overflow:hidden;">
+        <label>Strona (zostaw puste)
+          <input name="website" autocomplete="off">
+        </label>
+      </div>
+
+      <button type="submit">Wyślij</button>
+    </form>
+
+    <p>Wolisz napisać bezpośrednio? <a href="mailto:kontakt@awonsystem.pl">kontakt@awonsystem.pl</a></p>
   </main>
-  <script defer src="/contact.js"></script>
 </body>
 </html>
