ui(theme): wspólna kolorystyka i layout (ramki, formularze, karty) dla całego serwisu

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <link rel="apple-touch-icon" href="/favicon.svg">
 
-    <!-- SEO podstawy -->
+    <!-- SEO -->
     <link rel="canonical" href="https://awonsystem.pl/">
     <meta property="og:title" content="AWON — system zarządzania wynajmem" />
     <meta property="og:description" content="AWON — prostsza obsługa rezerwacji i operacji w obiektach noclegowych." />
@@ -38,9 +38,10 @@
     <link rel="preconnect" href="https://vitals.vercel-insights.com" crossorigin>
     <link rel="dns-prefetch" href="//vitals.vercel-insights.com">
 
-    <!-- preload stałych CSS -->
+    <!-- CSS: bazowe utilities + layout komponentów -->
     <link rel="preload" href="/uifix.css" as="style">
     <link rel="stylesheet" href="/uifix.css" />
+    <link rel="stylesheet" href="/pages.css" />
   </head>
   <body>
     <a href="#main" class="skip-link">Pomiń do treści</a>
