--- a/public/health.html
+++ b/public/health.html
@@ -1,18 +1,20 @@
 <!doctype html>
 <html lang="pl">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1">
   <title>AWON — Health</title>
-  <link rel="manifest" href="/manifest.webmanifest">
-  <meta name="theme-color" content="#0f172a">
-  <link rel="canonical" href="https://awonsystem.pl/health.html">
-  <link rel="stylesheet" href="/uifix.css">
-  <link rel="stylesheet" href="/pages.css">
-  <link rel="preload" href="/pages.css" as="style">
+  <link rel="manifest" href="/manifest.webmanifest"><meta name="theme-color" content="#0f172a">
+  <meta property="og:image" content="https://awonsystem.pl/api/og?title=Health%20%E2%80%94%20AWON">
+  <link rel="stylesheet" href="/uifix.css"><link rel="stylesheet" href="/pages.css">
 </head>
 <body>
   <a href="#main" class="skip-link">Pomiń do treści</a>
+  <header class="site-header"><div class="wrap bar">
+    <a href="/" class="brand"><img src="/logo/awon-mark.svg" alt="" width="28" height="28"> AWON</a>
+    <nav class="nav"><a href="/">Start</a><a href="/contact.html">Kontakt</a></nav>
+    <button id="theme-toggle" class="btn outline theme-toggle" aria-label="Przełącz motyw"><span id="theme-label">Ciemny</span></button>
+  </div></header>
+
   <main id="main" class="wrap">
     <h1>AWON — Health</h1>
     <div class="box grid">
@@ -21,27 +23,12 @@
       <div>Tryb (zgadywanie po hostname): <code id="mode"></code></div>
       <div>Start: <a href="/">/</a> • Ikona: <a href="/favicon.svg" target="_blank">/favicon.svg</a></div>
     </div>
-
-    <div class="box">
-      <h3>/health.json (statyczny)</h3>
-      <div id="loc-status">Ładowanie…</div>
-      <pre id="loc-json" style="white-space:pre-wrap"></pre>
-    </div>
-
-    <div class="box">
-      <h3>API via proxy (/api/health-proxy → https://api.awonsystem.pl/health)</h3>
-      <div class="meta">Omijamy CORS, bo żądanie idzie z tej samej domeny.</div>
-      <div id="api-status">Ładowanie…</div>
-      <pre id="api-json" style="white-space:pre-wrap"></pre>
-    </div>
-
-    <div class="box">
-      Szybkie linki:
-      <a href="/staging.txt" target="_blank">/staging.txt</a> •
-      <a href="/smoke.html" target="_blank">/smoke.html</a> •
-      <a href="/select-test.html" target="_blank">/select-test.html</a>
-    </div>
+    <div class="box"><h3>/health.json (statyczny)</h3><div id="loc-status">Ładowanie…</div><pre id="loc-json"></pre></div>
+    <div class="box"><h3>API via proxy</h3><div class="meta">/api/health-proxy → https://api.awonsystem.pl/health</div><div id="api-status">Ładowanie…</div><pre id="api-json"></pre></div>
+    <div class="box">Szybkie linki: <a href="/staging.txt" target="_blank">/staging.txt</a> • <a href="/smoke.html" target="_blank">/smoke.html</a> • <a href="/select-test.html" target="_blank">/select-test.html</a></div>
   </main>
-  <script defer src="/health.js"></script>
+
+  <footer class="site-footer"><div class="wrap bar"><div>© <span id="year"></span> AWON</div><div class="meta">awonsystem.pl</div></div></footer>
+  <script defer src="/theme.js"></script><script defer src="/footer.js"></script><script defer src="/health.js"></script>
 </body>
 </html>
