--- a/public/version.html
+++ b/public/version.html
@@ -1,19 +1,21 @@
 <!doctype html>
 <html lang="pl">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1">
   <title>AWON — Wersja wdrożenia</title>
-  <link rel="manifest" href="/manifest.webmanifest">
-  <meta name="theme-color" content="#0f172a">
-  <link rel="canonical" href="https://awonsystem.pl/version.html">
-  <link rel="stylesheet" href="/uifix.css">
-  <link rel="stylesheet" href="/pages.css">
-  <link rel="preload" href="/pages.css" as="style">
+  <link rel="manifest" href="/manifest.webmanifest"><meta name="theme-color" content="#0f172a">
+  <meta property="og:image" content="https://awonsystem.pl/api/og?title=Wersja%20%E2%80%94%20AWON">
+  <link rel="stylesheet" href="/uifix.css"><link rel="stylesheet" href="/pages.css">
 </head>
 <body>
   <a href="#main" class="skip-link">Pomiń do treści</a>
-  <main id="main">
+  <header class="site-header"><div class="wrap bar">
+    <a href="/" class="brand"><img src="/logo/awon-mark.svg" alt="" width="28" height="28"> AWON</a>
+    <nav class="nav"><a href="/">Start</a><a href="/contact.html">Kontakt</a></nav>
+    <button id="theme-toggle" class="btn outline theme-toggle" aria-label="Przełącz motyw"><span id="theme-label">Ciemny</span></button>
+  </div></header>
+
+  <main id="main" class="wrap">
     <h1>AWON — Wersja wdrożenia</h1>
     <div class="box grid">
       <div>Środowisko: <code id="env"></code></div>
@@ -23,12 +25,11 @@
       <div>Repo: <code id="repo"></code></div>
       <div>Adres wdrożenia: <code id="url"></code></div>
     </div>
-    <div class="box">
-      <div>Pełny JSON:</div>
-      <pre id="json" style="white-space:pre-wrap"></pre>
-    </div>
-    <p><a href="/">← Strona główna</a></p>
+    <div class="box"><div>Pełny JSON:</div><pre id="json"></pre></div>
+    <p><a class="btn outline" href="/">← Strona główna</a></p>
   </main>
-  <script defer src="/version.js"></script>
+
+  <footer class="site-footer"><div class="wrap bar"><div>© <span id="year"></span> AWON</div><div class="meta">awonsystem.pl</div></div></footer>
+  <script defer src="/theme.js"></script><script defer src="/footer.js"></script><script defer src="/version.js"></script>
 </body>
 </html>
